Moved the code for transforming a KGraph instance into a Dot instance to the graphviz.dot plugin.