@@ -30,105 +30,13 @@ import de.cau.cs.kieler.core.alg.IKielerProgressMonitor;
 import de.cau.cs.kieler.kiml.graphviz.layouter.preferences.GraphvizPreferencePage;
 
 /**
- * Defines constants used in the Graphviz Dot language and static methods to access Graphviz via a
- * separate process.
+ * Defines static methods to access Graphviz via a separate process.
  * 
  * @kieler.rating 2009-12-11 proposed yellow msp
  * @author tkl
  * @author msp
  */
 public final class GraphvizAPI {
-
-    /** Style of arrowhead on the head node of an edge. */
-    public static final String ATTR_ARROWHEAD = "arrowhead";
-    /** Style of arrowhead on the tail node of an edge. */
-    public static final String ATTR_ARROWTAIL = "arrowtail";
-    /** Bounding box. */
-    public static final String ATTR_BOUNDINGBOX = "bb";
-    /** Comment. */
-    public static final String ATTR_COMMENT = "comment";
-    /** Set edge type for drawing arrowheads. */
-    public static final String ATTR_EDGEDIR = "dir";
-    /** Preferred edge length, in inches (fdp, neato only). */
-    public static final String ATTR_EDGELEN = "len";
-    /** This specifies the expected number of pixels per inch on a display device. */
-    public static final String ATTR_DPI = "dpi";
-    /**
-     * If true, the node size is specified by the values of the width and height attributes only and
-     * is not expanded to contain the text label.
-     */
-    public static final String ATTR_FIXEDSIZE = "fixedsize";
-    /** Font used for text. */
-    public static final String ATTR_FONTNAME = "fontname";
-    /** Font size, in points, used for text. */
-    public static final String ATTR_FONTSIZE = "fontsize";
-    /** Text label to be placed near head of edge. */
-    public static final String ATTR_HEADLABEL = "headlabel";
-    /** Head label position, in points. */
-    public static final String ATTR_HEADLP = "head_lp";
-    /** Height of node, in inches. */
-    public static final String ATTR_HEIGHT = "height";
-    /** Text label attached to objects. */
-    public static final String ATTR_LABEL = "label";
-    /**
-     * This, along with labeldistance, determine where the headlabel (taillabel) are placed with
-     * respect to the head (tail) in polar coordinates.
-     */
-    public static final String ATTR_LABELANGLE = "labelangle";
-    /**
-     * Multiplicative scaling factor adjusting the distance that the headlabel(taillabel) is from
-     * the head(tail) node.
-     */
-    public static final String ATTR_LABELDISTANCE = "labeldistance";
-    /** Font used for headlabel and taillabel. */
-    public static final String ATTR_LABELFONTNAME = "labelfontname";
-    /** Font size, in points, used for headlabel and taillabel. */
-    public static final String ATTR_LABELFONTSIZE = "labelfontsize";
-    /** Justification for cluster labels. */
-    public static final String ATTR_LABELJUST = "labeljust";
-    /** Top/bottom placement of graph and cluster labels. */
-    public static final String ATTR_LABELLOC = "labelloc";
-    /** Label position, in points. */
-    public static final String ATTR_LABELPOS = "lp";
-    /** Determines if and how node overlaps should be removed (not dot). */
-    public static final String ATTR_OVERLAP = "overlap";
-    /**
-     * The pad attribute specifies how much, in inches, to extend the drawing area around the
-     * minimal area needed to draw the graph.
-     */
-    public static final String ATTR_PAD = "pad";
-    /** Position of node, or spline control points. */
-    public static final String ATTR_POS = "pos";
-    /** For graphs, this sets x and y margins of canvas, in inches. */
-    public static final String ATTR_MARGIN = "margin";
-    /** Specifies the minimum separation between all nodes (circo only). */
-    public static final String ATTR_MINDIST = "mindist";
-    /** Sets direction of graph layout (dot only). */
-    public static final String ATTR_RANKDIR = "rankdir";
-    /**
-     * In dot, this gives the desired rank separation, in inches. In twopi, specifies radial
-     * separation of concentric circles. (twopi, dot only)
-     */
-    public static final String ATTR_RANKSEP = "ranksep";
-    /** If 90, set drawing orientation to landscape. */
-    public static final String ATTR_ROTATE = "rotate";
-    /** Set the shape of a node. */
-    public static final String ATTR_SHAPE = "shape";
-    /**
-     * Controls how, and if, edges are represented. If true, edges are drawn as splines routed
-     * around nodes; if false, edges are drawn as line segments.
-     */
-    public static final String ATTR_SPLINES = "splines";
-    /** Parameter used to determine the initial layout of nodes (fdp, neato only). */
-    public static final String ATTR_START = "start";
-    /** Text label to be placed near tail of edge. */
-    public static final String ATTR_TAILLABEL = "taillabel";
-    /** Tail label position, in points. */
-    public static final String ATTR_TAILLP = "tail_lp";
-    /** Weight of edge. */
-    public static final String ATTR_WEIGHT = "weight";
-    /** Width of node, in inches. */
-    public static final String ATTR_WIDTH = "width";
 
     /** preference constant for Graphviz executable. */
     public static final String PREF_GRAPHVIZ_EXECUTABLE = "graphviz.executable";
@@ -146,16 +54,15 @@ public final class GraphvizAPI {
     /** argument to invert the Y axis to conform with SWT. */
     private static final String ARG_INVERTYAXIS = "-y";
     /** default locations of the dot executable. */
-    private static final String[] DEFAULT_LOCS = {
-            "/opt/local/bin/",
-            "/usr/local/bin/",
-            "/usr/bin/",
-            "/bin/" };
+    private static final String[] DEFAULT_LOCS = { "/opt/local/bin/",
+            "/usr/local/bin/", "/usr/bin/", "/bin/" };
     /** starting wait time for polling input from the Graphviz process. */
     private static final int MIN_INPUT_WAIT = 4;
     /** maximal wait time for polling input from the Graphviz process. */
     private static final int MAX_INPUT_WAIT = 500;
-    /** maximal number of characters that is read from the Graphviz error output. */
+    /**
+     * maximal number of characters that is read from the Graphviz error output.
+     */
     private static final int MAX_ERROR_OUTPUT = 512;
 
     /**
@@ -165,21 +72,27 @@ public final class GraphvizAPI {
     }
 
     /** the process instance that is used for multiple layout runs. */
-    private static Map<String, Process> processMap = new HashMap<String, Process>();
-    
+    private static Map<String, Process> processMap =
+            new HashMap<String, Process>();
+
     /**
-     * Starts a new Graphviz process with the given command. If a process instance was already
-     * created, that instance is returned.
+     * Starts a new Graphviz process with the given command. If a process
+     * instance was already created, that instance is returned.
      * 
-     * @param command the graphviz command to use
+     * @param command
+     *            the graphviz command to use
      * @return an instance of the graphviz process
-     * @throws KielerException if creating the process fails
+     * @throws KielerException
+     *             if creating the process fails
      */
-    public static synchronized Process startProcess(final String command) throws KielerException {
+    public static synchronized Process startProcess(final String command)
+            throws KielerException {
         Process graphvizProcess = processMap.get(command);
         if (graphvizProcess == null) {
-            IPreferenceStore preferenceStore = GraphvizLayouterPlugin.getDefault().getPreferenceStore();
-            String dotExecutable = preferenceStore.getString(PREF_GRAPHVIZ_EXECUTABLE);
+            IPreferenceStore preferenceStore =
+                    GraphvizLayouterPlugin.getDefault().getPreferenceStore();
+            String dotExecutable =
+                    preferenceStore.getString(PREF_GRAPHVIZ_EXECUTABLE);
             if (!new File(dotExecutable).exists()) {
                 boolean foundExec = false;
                 for (String location : DEFAULT_LOCS) {
@@ -191,43 +104,51 @@ public final class GraphvizAPI {
                 }
                 if (!foundExec) {
                     handleExecPath();
-                    // fetch the executable string again after the user has entered a new path
-                    dotExecutable = preferenceStore.getString(PREF_GRAPHVIZ_EXECUTABLE);
+                    // fetch the executable string again after the user has
+                    // entered a new path
+                    dotExecutable =
+                            preferenceStore.getString(PREF_GRAPHVIZ_EXECUTABLE);
                 }
             }
-    
+
             try {
-                graphvizProcess = Runtime.getRuntime().exec(
-                                new String[] {dotExecutable, ARG_NOWARNINGS, ARG_INVERTYAXIS,
-                                        ARG_COMMAND + command});
+                graphvizProcess =
+                        Runtime.getRuntime()
+                                .exec(new String[] { dotExecutable,
+                                        ARG_NOWARNINGS, ARG_INVERTYAXIS,
+                                        ARG_COMMAND + command });
                 processMap.put(command, graphvizProcess);
             } catch (IOException exception) {
                 throw new KielerException("Failed to start Graphviz process."
-                        + " Please check your Graphviz installation.", exception);
+                        + " Please check your Graphviz installation.",
+                        exception);
             }
         }
         return graphvizProcess;
     }
-    
+
     /**
-     * Handle missing path to the dot executable. The Graphviz preference page is opened
-     * so the user can enter the correct path. The method returns after the preference
-     * page has been closed.
+     * Handle missing path to the dot executable. The Graphviz preference page
+     * is opened so the user can enter the correct path. The method returns
+     * after the preference page has been closed.
      */
     private static void handleExecPath() {
         final Display display = PlatformUI.getWorkbench().getDisplay();
         display.syncExec(new Runnable() {
             public void run() {
-                PreferenceDialog preferenceDialog = PreferencesUtil.createPreferenceDialogOn(
-                        display.getActiveShell(), GraphvizPreferencePage.ID, new String[] {}, null);
+                PreferenceDialog preferenceDialog =
+                        PreferencesUtil.createPreferenceDialogOn(
+                                display.getActiveShell(),
+                                GraphvizPreferencePage.ID, new String[] {},
+                                null);
                 preferenceDialog.open();
             }
         });
     }
-    
+
     /**
-     * Closes the currently cached process instances so a new one is created for the next
-     * layout run.
+     * Closes the currently cached process instances so a new one is created for
+     * the next layout run.
      */
     public static void endProcess() {
         for (Process graphvizProcess : processMap.values()) {
@@ -243,18 +164,27 @@ public final class GraphvizAPI {
     }
 
     /**
-     * Waits until there is some input from the given input stream, with a customizable timeout.
+     * Waits until there is some input from the given input stream, with a
+     * customizable timeout.
      * 
-     * @param inputStream input stream from which input is expected
-     * @param errorStream error stream that is queried if there is no input
-     * @param monitor monitor to which progress is reported
-     * @param debugMode whether debug mode is active
-     * @throws KielerException if the timeout is exceeded while waiting
+     * @param inputStream
+     *            input stream from which input is expected
+     * @param errorStream
+     *            error stream that is queried if there is no input
+     * @param monitor
+     *            monitor to which progress is reported
+     * @param debugMode
+     *            whether debug mode is active
+     * @throws KielerException
+     *             if the timeout is exceeded while waiting
      */
-    public static void waitForInput(final InputStream inputStream, final InputStream errorStream,
-            final IKielerProgressMonitor monitor, final boolean debugMode) throws KielerException {
+    public static void waitForInput(final InputStream inputStream,
+            final InputStream errorStream,
+            final IKielerProgressMonitor monitor, final boolean debugMode)
+            throws KielerException {
         monitor.begin("Wait for Graphviz", 1);
-        IPreferenceStore preferenceStore = GraphvizLayouterPlugin.getDefault().getPreferenceStore();
+        IPreferenceStore preferenceStore =
+                GraphvizLayouterPlugin.getDefault().getPreferenceStore();
         int timeout = preferenceStore.getInt(PREF_TIMEOUT);
         if (timeout < PROCESS_MIN_TIMEOUT) {
             timeout = PROCESS_DEF_TIMEOUT;
@@ -276,18 +206,22 @@ public final class GraphvizAPI {
             } catch (InterruptedException exception) {
                 // ignore exception
             }
-            // read and check error stream if there is still no input from Graphviz
+            // read and check error stream if there is still no input from
+            // Graphviz
             if (inputStream.available() == 0 && !monitor.isCanceled()) {
                 StringBuilder error = new StringBuilder();
-                while (error.length() < MAX_ERROR_OUTPUT && errorStream.available() > 0) {
+                while (error.length() < MAX_ERROR_OUTPUT
+                        && errorStream.available() > 0) {
                     error.append((char) errorStream.read());
                 }
                 endProcess();
                 if (error.length() > 0) {
-                    throw new KielerException("Graphviz error: " + error.toString());
+                    throw new KielerException("Graphviz error: "
+                            + error.toString());
                 } else {
-                    throw new KielerException("Timeout exceeded while waiting for Graphviz output. "
-                            + "Try increasing the timeout value in the preferences.");
+                    throw new KielerException(
+                            "Timeout exceeded while waiting for Graphviz output. "
+                                    + "Try increasing the timeout value in the preferences.");
                 }
             } else {
                 // read the error stream anyway - if error stream is not empty,
@@ -302,7 +236,8 @@ public final class GraphvizAPI {
             }
         } catch (IOException exception) {
             endProcess();
-            throw new KielerException("Unable to read Graphviz output.", exception);
+            throw new KielerException("Unable to read Graphviz output.",
+                    exception);
         } finally {
             monitor.done();
         }
